--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>AIMAN COLLEGE </title>
+  <title>AIMAN COLLEGE</title>
 </head>
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
-    <p>aafrin</p>
+    <h1>TRICHY</h1>
+    <h2>TAMIL NADU,INDIA</h2>
   </main>
 </body>
 
 </html>
+                          
